--- a/src/css/App.css
+++ b/src/css/App.css
@@ -15,7 +15,7 @@
   color: white;
   height: 20vh;
   width: 6em;
-  padding-top: .5em;
+  /* padding-top: .5em; */
   display: flex;
   flex-direction: column;
   justify-content: center;
