--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,10 +8,25 @@
 
 .card{
   width: 10em;
+  /* height: 10em; */
+}
+
+.card-image{
+
+  width: 4em !important;
+  height: auto;
+  margin: 0 auto;
+}
+
+.wynjoke-logo{
+
+  /* width: 10em !important;
+  height: auto;
+  margin: 0 auto; */
 }
 
 .card-header{
-  background-color: #3f50b5 !important;
+  background-color: #ff9100 !important;
   color: white;
   height: 20vh;
   width: 6em;
@@ -19,6 +34,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+
 }
 
 .banner{
@@ -27,8 +43,8 @@
 }
 .banner-top{
   text-align: center;
-  background-color: #002884;
-  height: 30vh;
+  background-color: #2196f3;
+  height: 100vh;
 }
 
 .grid{
@@ -37,5 +53,5 @@
 }
 
 .buttons-margin{
-  padding-top: 7em;
+  padding-top: 2em;
 }
