vertical stepper changes when you go to different section

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -45,8 +45,8 @@
 }
 .banner-top{
   text-align: center;
-  background-color: #03487c;
-  height: 160vh;
+  background-color: #002e4f;
+  height: 180vh;
 }
 
 .grid{
@@ -75,7 +75,11 @@
 }
 
 .site-title{
-  padding-top: 5em;
+  padding-top: 3em;
+  color: white !important;
+}
+
+.project-title{
   color: white !important;
 }
 
@@ -86,4 +90,23 @@
 
 .project-section-title{
   padding-bottom: 5em;
+}
+
+.main-stepper{
+  position: fixed;
+  right: 0;
+  top: 25%;
+  background: transparent !important;
+}
+
+.button-group{
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 6em;
+  display: flex;
+  justify-content: space-around;
+}
+
+.home-button{
+  width: 20px;
 }
