--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Chakra+Petch');
+
 .App{
   /* background-color: black; */
   /* height: 100vh; */
@@ -77,10 +79,12 @@
 .site-title{
   padding-top: 3em;
   color: white !important;
+  font-family: 'Chakra Petch', sans-serif !important;
 }
 
 .project-title{
   color: white !important;
+  font-family: 'Chakra Petch', sans-serif !important;
 }
 
 .main-section{
