--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,6 +8,11 @@
   /* justify-content: center; */
 }
 
+.prof-pic {
+  width: 800px;
+  height: auto;
+}
+
 .card{
   width: 10em;
   /* height: 10em; */
@@ -47,7 +52,7 @@
 }
 .banner-top{
   text-align: center;
-  background-color: #002e4f;
+  background-color: #B4B3AF;
   height: 280vh;
 }
 
