got rid of broken and unnecessary features

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -71,7 +71,7 @@
 }
 
 .download-space{
-  padding-top: 10em;
+  /* padding-top: 10em; */
 }
 
 .zindex-test{
@@ -95,7 +95,7 @@
 }
 
 .main-section{
-  padding-top: 40em;
+  padding-top: 36em;
   font-weight: bold;
 }
 
